[package]
name = "terminusdb-surgery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0", features=["derive"]}
terminus-store = {package = "terminus-store", path = "../terminusdb-store", features=["eprint_log"]}
tokio = {version = "1.0", features = ["full"]}
bytes = "1.4"
num = "0.4"
futures = "0.3"
